--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "discord-interactions": "^3.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.0",
-    "uuid": "^9.0.0"
+    "mongodb": "^5.0.1",
+    "node-fetch": "^3.3.0"
   }
 }
